--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ name = "lcd_demo"
 path = "examples/lcd_demo.rs"
 
 [dependencies]
-embedded-hal = "1.0.0"
 rppal = { version = "0.22.1", features = ["hal"] }
-# This version supports embedded-hal 1.0
-mcp230xx = { git = "https://github.com/gfg-development/mcp230xx.git" }
+# This version supports embedded-hal 1.0.. Except it isn't published on Crates.io
+#mcp230xx = { git = "https://github.com/gfg-development/mcp230xx.git" }
+mcp230xx = "1.0.1"
